--- a/readme
+++ b/readme
@@ -1,7 +1,4 @@
 firstchange
-<<<<<<< HEAD
 2nd line
 3rd line
-=======
-second line
->>>>>>> e3065a131717e9e66f81516c2faafbfa95ca2cbb
+adding 5th comment
